<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFFFF">

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_6"
            android:background="@drawable/blue_shadows"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabBar" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tabBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_64"
            android:background="#2699fb"
            app:contentInsetStart="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back_arrow"
                android:layout_width="@dimen/icon_48"
                android:layout_height="@dimen/icon_48"
                android:layout_marginStart="@dimen/margin_32"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/motive_icon_backwardarrow"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="#FFFFFFFF"
                android:textSize="@dimen/font_20sp"
                android:layout_gravity="center"/>

        </androidx.appcompat.widget.Toolbar>


        <TextView
            android:id="@+id/helpText"
            android:layout_width="@dimen/width_352"
            android:layout_height="@dimen/height_96"
            android:layout_marginTop="@dimen/margin_48"
            android:text="@string/email_input_confirm_num"
            android:textColor="#666666"
            android:textSize="@dimen/font_32sp"
            app:layout_constraintStart_toStartOf="@id/email_view"
            app:layout_constraintTop_toBottomOf="@id/tabBar"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/email"
            android:layout_width="@dimen/width_240"
            android:layout_height="@dimen/height_24"
            android:layout_marginTop="@dimen/margin_48"
            android:lineHeight="@dimen/font_24sp"
            android:text="@string/email"
            android:textColor="#414141"
            android:textSize="@dimen/font_16sp"
            app:layout_constraintStart_toStartOf="@id/email_view"
            app:layout_constraintTop_toBottomOf="@id/helpText"
            tools:ignore="UnusedAttribute" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/email_view"
            android:layout_width="@dimen/width_416"
            android:layout_height="@dimen/height_64"
            android:layout_marginTop="@dimen/margin_8"
            android:background="@drawable/text_border_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                app:hintEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/input_email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/margin_8"
                    android:textSize="@dimen/font_20sp" />

            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="@dimen/width_416"
            android:layout_height="@dimen/height_64"
            android:layout_marginTop="@dimen/margin_16"
            android:background="@drawable/btn_back_gray"
            android:enabled="false"
            android:text="@string/auth_email_send"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/font_20sp"
            app:layout_constraintStart_toStartOf="@id/email_view"
            app:layout_constraintTop_toBottomOf="@id/email_view" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="@dimen/width_352"
            android:layout_height="@dimen/height_24"
            android:layout_marginTop="@dimen/margin_8"
            android:gravity="center"
            android:text="@string/auth_email_send_push"
            android:textColor="#666666"
            android:textSize="@dimen/font_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirm_btn" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/confirm_text"
            android:layout_width="@dimen/width_240"
            android:layout_height="@dimen/height_24"
            android:layout_marginTop="@dimen/margin_48"
            android:text="@string/confirm_num"
            android:textColor="#414141"
            android:textSize="@dimen/font_16sp"
            app:layout_constraintStart_toStartOf="@id/email_view"
            app:layout_constraintTop_toBottomOf="@id/confirm_btn" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/confirm_view"
            android:layout_width="@dimen/width_304"
            android:layout_height="@dimen/height_64"
            android:layout_marginTop="@dimen/margin_8"
            android:background="@drawable/text_border_15"
            app:layout_constraintStart_toStartOf="@id/email_view"
            app:layout_constraintTop_toBottomOf="@id/confirm_text">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_num"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/confirm_6"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="6"
                    android:padding="@dimen/margin_8"
                    android:textColor="#b3b3b3"
                    android:textSize="@dimen/font_17sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/confirm_ok"
            android:layout_width="@dimen/width_96"
            android:layout_height="@dimen/height_64"
            android:layout_marginStart="@dimen/margin_16"
            android:background="@drawable/btn_back_gray"
            android:enabled="false"
            android:text="@string/check"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/font_17sp"
            app:layout_constraintStart_toEndOf="@id/confirm_view"
            app:layout_constraintTop_toTopOf="@id/confirm_view" />

        <Button
            android:id="@+id/confirm_jump_btn"
            android:layout_width="@dimen/width_144"
            android:layout_height="@dimen/height_64"
            android:layout_marginBottom="@dimen/margin_32"
            android:background="@drawable/blue_border_15"
            android:text="@string/jump"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/font_17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/email_view" />

        <Button
            android:id="@+id/confirm_next_btn"
            android:layout_width="@dimen/width_144"
            android:layout_height="@dimen/height_64"
            android:layout_marginBottom="@dimen/margin_32"
            android:background="@drawable/btn_back_gray"
            android:enabled="false"
            android:text="@string/next"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/font_17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/email_view" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>