<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFFFF"
        >
        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_6"
            app:layout_constraintTop_toBottomOf="@id/tabBar"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/blue_shadows"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tabBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_64"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="#2699fb"
            >

            <ImageView
                android:id="@+id/back_arrow"
                android:layout_width="@dimen/icon_32"
                android:layout_height="@dimen/icon_32"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/margin_32"
                app:srcCompat="@drawable/back_arrow_icon"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="@dimen/width_320"
                android:layout_height="@dimen/height_32"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="@dimen/font_20sp"
                android:text="@string/find_pass"
                android:textColor="#FFFFFFFF"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/helpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_same_pass"
            android:textSize="@dimen/font_20sp"
            app:layout_constraintTop_toBottomOf="@id/tabBar"
            app:layout_constraintStart_toStartOf="@id/find_pass_btn"
            android:layout_marginTop="@dimen/margin_48"
            android:textColor="#666666"
            android:lineHeight="@dimen/font_32sp"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/id"
            android:layout_width="@dimen/width_240"
            android:layout_height="@dimen/height_24"
            android:text="@string/id"
            app:layout_constraintTop_toBottomOf="@id/helpText"
            app:layout_constraintStart_toStartOf="@id/find_pass_btn"
            android:layout_marginTop="@dimen/margin_48"
            android:textSize="@dimen/font_16sp"
            android:lineHeight="@dimen/font_24sp"
            android:textColor="#414141"
            tools:ignore="UnusedAttribute" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/find_pass_view"
            android:layout_width="@dimen/width_416"
            android:layout_height="@dimen/height_64"
            app:layout_constraintTop_toBottomOf="@id/id"
            app:layout_constraintStart_toStartOf="@id/find_pass_btn"
            android:layout_marginTop="@dimen/margin_8"
            android:background="@drawable/text_border_15"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/find_pass_idtextInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/margin_16"
                app:hintEnabled="false"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/find_pass_id_text"
                    android:layout_width="@dimen/width_256"
                    android:layout_height="@dimen/height_32"
                    android:background="@null"
                    android:hint="@string/id_input2"
                    android:importantForAutofill="no"
                    android:textSize="@dimen/font_20sp"
                    android:inputType="text"
                    android:maxLength="16"
                    />

            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/email"
            android:layout_width="@dimen/width_240"
            android:layout_height="@dimen/height_24"
            android:text="@string/email"
            app:layout_constraintTop_toBottomOf="@id/find_pass_view"
            app:layout_constraintStart_toStartOf="@id/find_pass_btn"
            android:layout_marginTop="@dimen/margin_16"
            android:textSize="@dimen/font_16sp"
            android:lineHeight="@dimen/font_24sp"
            android:textColor="#414141"
            tools:ignore="UnusedAttribute" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/find_pass_email_view"
            android:layout_width="@dimen/width_416"
            android:layout_height="@dimen/height_64"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintStart_toStartOf="@id/find_pass_btn"
            android:layout_marginTop="@dimen/margin_8"
            android:background="@drawable/text_border_15"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_textInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/margin_16"
                app:hintEnabled="false"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/find_pass_email_text"
                    android:layout_width="@dimen/width_256"
                    android:layout_height="@dimen/height_32"
                    android:hint="@string/email_input"
                    android:textSize="@dimen/font_20sp"
                    android:background="@null"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="@dimen/width_416"
            android:layout_height="@dimen/height_64"
            app:layout_constraintTop_toBottomOf="@id/find_pass_email_view"
            app:layout_constraintStart_toStartOf="@id/find_pass_btn"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/tempo_pass_send"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/font_20sp"
            android:background="@drawable/btn_back_gray"
            android:enabled="false"
            />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="@dimen/width_352"
            android:layout_height="@dimen/height_24"
            android:gravity="center"
            android:text="@string/tempo_pass_send_push"
            android:textColor="#666666"
            android:textSize="@dimen/font_16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirm_btn" />

        <Button
            android:id="@+id/find_pass_btn"
            android:layout_width="@dimen/width_416"
            android:layout_height="@dimen/height_64"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/margin_32"
            android:text="@string/check"
            android:textSize="@dimen/font_17sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/btn_back_blue"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>